add readme & polish
